fix glitch where onboarding btns are hiding on ios

--- a/src/scenes/onboarding/theme.css
+++ b/src/scenes/onboarding/theme.css
@@ -176,7 +176,6 @@
 
     @media (--sd-mobile) {
       width: 100%;
-      margin: auto auto 0 auto;
     }
 
     .stepButtons {
